[package]
name = "mdbook-api"
version = "0.1.0"
authors = ["Joel <joel.gugger@rdlp.ch>"]
edition = "2018"

[dependencies]
mdbook = "0.3.5"
handlebars = "^2"
regex = "1.3.4"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.6.1"
lazy_static = "1.0"
